import arc.util.serialization.Jval

buildscript {
	repositories {
		mavenCentral()
		maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

		//Downloads the server-release JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
		ivy {
			url 'https://github.com/'
			patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/server-release.jar' }
			metadataSources { artifact() }
		}

		//"Latest" option to depend on BE builds.
		ivy {
			url 'https://github.com/'
			patternLayout { artifact '/[organisation]/[module]/releases/download/master/[revision].jar' }
			metadataSources { artifact() }
		}

		//Do the same with jabel
		ivy {
			url 'https://github.com/'
			patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/jabel.jar' }
			metadataSources { artifact() }
		}
	}

	dependencies {
		classpath "Anuken:Mindustry:$mindustryVersion"
	}
}

apply plugin: 'java'

sourceSets.main.java.srcDir('src')

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

	//Downloads the server-release JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/server-release.jar' }
		metadataSources { artifact() }
	}

	//"Latest" option to depend on BE builds.
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/master/[revision].jar' }
		metadataSources { artifact() }
	}

	//Do the same with jabel
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/jabel.jar' }
		metadataSources { artifact() }
	}
}

java {
	targetCompatibility = JavaVersion.VERSION_17
	sourceCompatibility = JavaVersion.VERSION_17
}

ext {
	//windows sucks
	isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
	sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
			"--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
	])
}

dependencies {
	compileOnly "Anuken:Mindustry:$mindustryVersion"

	compileOnly "com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3"

	def libsDir = project(":").projectDir

	compileOnly files(
			"$libsDir/libs/EndfieldMod-260329a.jar",
			"$libsDir/libs/android.jar",
			"$libsDir/libs/android-dalvik.jar",
			"$libsDir/libs/mindustry-android.jar"
	)

	implementation files("$libsDir/libs/field-utils.jar")
}

tasks.register("list") {
	inputs.files tasks.compileJava, configurations.runtimeClasspath

	def output = file("$temporaryDir/classes-android.json")
	outputs.file output

	doFirst {
		def packages = Jval.newArray()
		def classes = Jval.newArray()

		def proc = { def proc, String path, File dir ->
			for (def child : dir.listFiles()) {
				if (child.directory) {
					def name = child.name
					if (!path.startsWith("endfield") && name != "endfield") continue

					def visited = path.empty ? name : "$path.$name"

					packages.add(visited)
					proc(proc, visited, child)
				} else {
					def dot = child.name.lastIndexOf(".")
					if (dot == -1) continue

					def name = child.name.substring(0, dot)
					def ext = child.name.substring(dot + 1)

					if (ext == "class") classes.add("$path.$name")
				}
			}
		}

		sourceSets.main.runtimeClasspath.forEach { proc(proc, "", it) }

		def compacted = Jval.newObject().put("packages", packages).put("classes", classes)
		output.withWriter { compacted.writeTo(it, Jval.Jformat.formatted) }
	}
}

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}

tasks.register("jarAndroid", Jar) {
	dependsOn "jar"

	archiveFileName = "${rootProject.name}Android.jar"

	from {
		[zipTree("${project(":android").buildDir}/libs/android.jar")]
	}

	doLast {
		if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")

		def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }

		if (!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")

		//collect dependencies needed for desugaring
		def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect { "--classpath $it.path" }.join(" ")

		def d8 = isWindows ? "d8.bat" : "d8"

		//dex and desugar files - this requires d8 in your PATH
		"$d8 $dependencies --min-api 28 --output ${rootProject.name}Android.jar ${rootProject.name}Android.jar"
				.execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
	}
}